2008-11-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	Transfer ownership on gtk_container_get_children

	* vapi/gtk+-2.0.vapi: regenerated

2008-11-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:

	Transfer ownership on gst_tag_list_merge

	* vapi/gstreamer-0.10.vapi: regenerated

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala:
	* vala/valaelementaccess.vala:
	* vala/valasourcefile.vala:

	Allow any integer compatible value to be used as array index,
	fixes bug 561057

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaflowanalyzer.vala:

	Fix control flow graph for try statements with finally clause,
	fixes bug 561115

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valadynamicmethod.vala:
	* vala/valadynamicsignal.vala:

	Fix checking of dynamic methods and signals

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala:

	Correct source file dependencies for private fields of compact
	classes, based on patch by Thijs Vermeir, fixes bug 555249

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:
	* vala/valacreationmethod.vala:
	* vala/valafield.vala:
	* vala/valaforeachstatement.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethod.vala:

	Ensure that members are checked when accessing them,
	fixes bug 561018

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_queue_*_nth bindings, patch by John Carr

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Set target_type for member initializers

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bin_add_many binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valainterfacewriter.vala:
	* vala/valainvocationexpression.vala:
	* vala/valaparser.vala:
	* vala/valascanner.vala: